<resources>
    <string name="app_name">FOrder</string>
    <string name="mgs_product_time_out">This product is time out, you can not order this product!</string>
    <string name="mgs_this_order">Would you like this order?</string>
    <string name="mgs_order_all">Would you like order all?</string>
    <string name="mgs_delete_product">Would you like delete this product?</string>
    <string name="mgs_accept_order">Do you really want to close the order?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="OK">OK</string>
    <string name="action_order_all">Order All</string>
    <string name="title_total">Total :\u0020 </string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_search">Search</string>
    <string name="title_tab_nitofy">Notifications</string>
    <string name="title_tab_profile">Profile</string>
    <string name="action_see_more">See more</string>
    <string name="username"> Username</string>
    <string name="password"> Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="font_serif">serif</string>
    <string name="do_not_have_an_account">Do not have an Account?</string>
    <string name="where_are_you">Where are you?</string>
    <string name="select_domain">Select domain:</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome to</string>
    <string name="btn_detail_profile">Your profile</string>
    <string name="order_history">Order History</string>
    <string name="order_management">Order management</string>
    <string name="shop_management">Shop management</string>
    <string name="domain_management">Domain management</string>
    <string name="logout">Logout</string>
    <string name="featured">Featured</string>
    <string name="new_">New</string>
    <string name="sale_off">Sale off</string>
    <string name="email">Email: </string>
    <string name="chatwork_id">Chatwork id: </string>
    <string name="join_date">Join date: </string>
    <string name="status">Status: </string>
    <string name="description">Description: </string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password">Current password</string>
    <string name="submit">Submit</string>
    <string name="money_unit">\u0020VNĐ</string>
    <string name="login_error">Login Error !</string>
    <string name="login_success">Login Success !</string>
    <string name="wrong_email_or_password">Can Not Find the User!</string>
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="cannot_load_the_data">Cannot load the data</string>
    <string name="email_is_Empty">Email is Empty !</string>
    <string name="password_is_Empty">Password is Empty!</string>
    <string name="you_need_to_choose_a_domain_to_continue">You need to choose a domain to continue!</string>
    <string name="none">None</string>
    <string name="search">Search...</string>
    <string name="product">Product</string>
    <string name="shop">Shop</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit!</string>
    <string name="confirm_new_password_does_not_match">Confirm new password does not match</string>
    <string name="current_password_is_empty">Current password is empty</string>
    <string name="update_profile_success">Update profile success</string>
    <string name="nothing_change">Nothing change</string>
    <string name="change_password">Change password</string>
    <string name="change_domain">Change domain</string>
    <string name="shop_name">Shop name: </string>
    <string name="product_quantity">Product quantity: </string>
    <string name="owner">Shop owner: </string>
    <string name="rating">Rating: </string>
    <string name="comments">Comments</string>
    <string name="products_shop">Products Shop</string>
    <string name="see_all">See All</string>
    <string name="title_shop">Shop :\u0020 </string>
    <string name="shop_information">Shop Information</string>
    <string name="shop_owner_information">Shop owner information</string>
    <string name="time">Time:</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="step_one_check_order">Step 1: Check orders</string>
    <string name="step_two_close_order">Step 2: Close orders</string>
    <string name="continue_check">Continue</string>
    <string name="shop_related">Shop Related</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="quantity">Quantity : %d</string>
    <string name="prices">Price : %s</string>
    <string name="start_date">Start date </string>
    <string name="end_date">End date </string>
    <string name="filter">Filter</string>
    <string name="your_order_history">Your order history</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="select_all">Select all</string>
    <string name="see_more">See More..</string>
    <string name="button_join_domain">button Join Domain</string>
    <string name="image_shop_management">Image Shop Management</string>
    <string name="domain_location">Domain Location</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel?</string>
    <string name="edit">edit</string>
    <string name="avatar_shop">avatar_Shop</string>
    <string name="create_new_shop">Create Shop</string>
    <string name="open_forever">Open daily:</string>
    <string name="auto_reject_time">Auto-reject time:</string>
    <string name="cover_image">Cover image</string>
    <string name="two_dot">:</string>
    <string name="choose_image">Choose Image</string>
    <string name="create">Create</string>
    <string name="open_time">Open Time :</string>
    <string name="open_daily">Open daily :</string>
    <string name="avatar">Avatar : </string>
    <string name="time_automatically_refused_order">Time automatically refused order :</string>
    <string name="choose_file">Choose file</string>
    <string name="edit_shop">Edit Shop</string>
    <string name="choose_time">Choose Time</string>
    <string name="time_auto_close">Time auto Close :</string>
    <string name="save">Save</string>
    <string name="zero">0</string>
    <string name="name_is_empty">Name is Empty</string>
    <string name="description_is_empty">Description is Empty</string>
    <string name="create_shop_successful">Create shop successful!</string>
    <string name="please_wait">Please Wait..</string>
    <string name="loading">Loading…</string>
    <string name="you_must_choose_image">You must choose image!</string>
    <string name="blocked">Blocked</string>
    <string name="wait">Wait</string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="create_new_product">Create Product</string>
    <string name="product_name">Product name</string>
    <string name="category">Category</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>
    <string name="price">Price</string>
    <string name="update_success">Update Success</string>
    <string name="top_shop">Top Shop</string>
    <string name="categories">Categories</string>
    <string name="top_product">Top Product</string>
    <string name="create_product_successful">Create Product Successful!</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_successful">Update Successful</string>
    <string name="note">Note :</string>
    <string name="order_successful">Order Successful!</string>
    <string name="accepted_status">accepted</string>
    <string name="rejected_status">rejected</string>
    <string name="input_your_note">Input your note</string>
    <string name="add_note">Add note</string>
    <string name="reject_all">Reject All</string>
    <string name="accept_all">Accept All</string>
    <string name="leave">Leave</string>
    <string name="close_order">Close Order</string>
    <string name="close_order_success">Close Order Success</string>
    <string name="done_orders">Done Order</string>
    <string name="rejected_orders">Rejected Orders</string>
    <string name="name_domain">Name Domain</string>
    <string name="secret">secret</string>
    <string name="professed">professed</string>
    <string name="add_domain">Add Domain</string>
    <string name="add_domain_success">Add Domain Successful!</string>
    <string name="quantity_order_history">Quantity: </string>
    <string name="msg_delete_domain">Do you really want to delete?</string>
    <string name="msg_leave_domain">Do you really want to leave?</string>
    <string name="delete_the_domain_success">Delete the domain successful!</string>
    <string name="leave_the_domain_successful">Leave the domain successful!</string>
    <string name="edit_domain">Edit Domain</string>
    <string name="add_to_cart_success">Add To Cart Successfully!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order_now">Order Now</string>
    <string name="hint_notes">Any specific note like less spicy, no pickles mention here…</string>
    <string name="quick_order">Quick Order</string>
    <string name="list_domain">List Domain</string>
    <string name="list_order">List Order</string>
    <string name="manager_in_shop">Manager</string>
    <string name="close">Close</string>
    <string name="see_manager">See Manager</string>
    <string name="user_in_domain">User in domain</string>
    <string name="delete">Delete</string>
    <string name="set_manager">Set Manager</string>
    <string name="delete_success">Delete Successful!</string>
    <string name="msg_delete_user">Do you really want to delete the user?</string>
    <string name="change_role_success">Change Role Successful!</string>
    <string name="view_user">View User</string>
    <string name="view_product">View Product</string>
    <string name="product_status">Status</string>
    <string name="product_description">Description</string>
    <string name="function_is_being_processed">Function is being processed!</string>
    <string name="view_shop">View Shop</string>
    <string name="cancel_manager">Cancel Manager</string>
    <string name="add_user">Add User</string>
    <string name="add">+Add</string>
    <string name="add_user_success">Add User Successful!</string>
    <string name="request_success">Request Successful!</string>
    <string name="cancel_success">Cancel Successful!</string>
    <string name="add_manager_in_shop">Add Manager In Shop</string>
    <string name="secret_status">Secret</string>
    <string name="professed_status">Professed</string>
    <string name="active_status">Active</string>
    <string name="inactive_status">Inactive</string>
    <string name="reject_status">Reject</string>
    <string name="accept_status">Accept</string>
    <string name="user_unit">User</string>
    <string name="shop_unit">Shop</string>
    <string name="your_cart">Your Cart</string>
    <string name="number_of_product">Number Of Product:</string>
    <string name="all">All:</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="count">Count:</string>
    <string name="id_room_chatwork">Id Room Chatwork</string>
    <string name="send_email">Send Email</string>
    <string name="enter_your_email_blow_and_we_will_send_email_for_you">Enter your email blow, and we will send email for you !</string>
    <string name="forgot_the_password">Forgot the password</string>
</resources>