<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.forder.screen.domainmanagement.adddomain.AddDomainViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/dp_300"
        android:orientation="vertical"
        android:padding="@dimen/dp_15"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_domain"
            android:text="@={viewModel.nameDomain}"
            android:textAppearance="@style/Widget.AppCompat.EditText"
            android:textSize="@dimen/sp_16"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_room_chatwork"
            android:inputType="number"
            android:text="@={viewModel.idRoomChatwork}"
            android:textAppearance="@style/Widget.AppCompat.EditText"
            android:textSize="@dimen/sp_16"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/status"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCheckedSecret}"
                android:onCheckedChanged="@{() -> viewModel.onCheckedSecret()}"
                android:text="@string/secret_status"
                style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:checked="@{viewModel.isCheckedProfessed}"
                android:text="@string/professed_status"
                style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
                />
        </RadioGroup>
    </LinearLayout>
</layout>
