<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.forder.screen.login.LoginViewModel"
            />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="@dimen/dp10"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp200"
            android:layout_height="@dimen/dp80"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp45"
            android:background="@drawable/ic_logo"
            />
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="@dimen/dp30"
            android:paddingTop="@dimen/dp10"
            >
            <EditText
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/border_text"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="@dimen/dp20"
                android:fontFamily="@string/font_serif"
                android:hint="@string/username"
                android:inputType="textCapWords"
                android:paddingLeft="@dimen/dp10"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                />
            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_username"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/border_text"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/dp20"
                android:fontFamily="serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp10"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/text_password"
                android:layout_alignRight="@+id/text_password"
                android:layout_below="@+id/text_password"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/forgot_password"
                android:textColor="@color/color_white"
                android:textSize="@dimen/dp15"
                />

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/border_button"
            android:fontFamily="@string/font_serif"
            android:text="@string/login"
            android:textColor="@color/color_orange"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/color_gray"
                />
            <TextView
                android:layout_marginLeft="@dimen/dp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>
