<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.forder.screen.forgotpassword.ForgotPasswordViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_60"
            app:srcCompat="@drawable/ic_lock_white_36dp"
            tools:ignore="ContentDescription"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:text="@string/forgot_the_password"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/enter_your_email_blow_and_we_will_send_email_for_you"
            android:textColor="@color/color_white"
            />
        <EditText
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border_text"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="@dimen/dp_20"
            android:drawableStart="@drawable/ic_username"
            android:fontFamily="@string/font_serif"
            android:hint="@string/email"
            android:paddingEnd="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_5"
            android:paddingStart="@dimen/dp_10"
            android:text="@={viewModel.email}"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            app:errorTextEmailFormat="@{viewModel.emailError}"
            app:viewModel="@{viewModel}"
            tools:ignore="UnusedAttribute"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/border_button"
            android:fontFamily="@string/font_serif"
            android:onClick="@{()->viewModel.onClickSendEmail()}"
            android:text="@string/send_email"
            android:textColor="@color/color_orange"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute"
            />
    </LinearLayout>
</layout>
