<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_alignParentBottom="true"
            android:background="@color/color_gray_white"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/layout_home"
                style="@style/StyleTabFooter"
                >
                <ImageView
                    app:srcCompat="@drawable/ic_home"
                    style="@style/StyleImageViewTabFooter"
                    />
                <TextView
                    android:text="@string/title_tab_home"
                    style="@style/StyleTitleTabFooter"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_seach"
                style="@style/StyleTabFooter"
                >
                <ImageView
                    app:srcCompat="@drawable/ic_search"
                    style="@style/StyleImageViewTabFooter"
                    />
                <TextView
                    android:text="@string/title_tab_search"
                    style="@style/StyleTitleTabFooter"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/StyleTabFooter"
                />
            <LinearLayout
                android:id="@+id/layout_notify"
                style="@style/StyleTabFooter"
                >
                <ImageView
                    app:srcCompat="@drawable/ic_notifications"
                    style="@style/StyleImageViewTabFooter"
                    />
                <TextView
                    android:text="@string/title_tab_nitofy"
                    style="@style/StyleTitleTabFooter"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_profile"
                style="@style/StyleTabFooter"
                >
                <ImageView
                    app:srcCompat="@drawable/ic_person"
                    style="@style/StyleImageViewTabFooter"
                    />
                <TextView
                    android:text="@string/title_tab_profile"
                    style="@style/StyleTitleTabFooter"
                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_top"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerInParent="true"
            android:background="@drawable/center_tab_footer"
            app:srcCompat="@drawable/ic_cart"
            />

    </RelativeLayout>

</layout>
