<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.forder.screen.ordermanagement.checkorder.CheckOrderViewModel"
            />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_stroke"
        android:orientation="vertical"
        >
        <ExpandableListView
            android:id="@+id/expand_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:groupIndicator="@null"
            android:scrollbars="none"
            app:adapter="@{viewModel.adapter}"
            />
        <android.support.v7.widget.CardView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_gray_white"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5"
                >
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/select_all"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_35"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toLeftOf="@+id/button_reject"
                    android:background="@drawable/button_blue"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    />
                <Button
                    android:id="@+id/button_reject"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_35"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@drawable/button_red"
                    android:text="@string/reject"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</layout>
